mb-dark: Darken email inputs

--- a/musicbrainz-dark.user.css
+++ b/musicbrainz-dark.user.css
@@ -214,7 +214,7 @@
 		border-color: #777;
 	}
 	input[type=text]:not(.lookup-performed):not(.success):not(.error), input:not([type]),
-	input[type=url], input[type=search], input[type=password], textarea {
+	input[type=url], input[type=search], input[type=password], input[type=email], textarea {
 		background: #222;
 		color: #DDD;
 	}
