--- a/musicbrainz-dark.user.css
+++ b/musicbrainz-dark.user.css
@@ -213,6 +213,10 @@
 	input, textarea {
 		border-color: #777;
 	}
+	input[disabled], textarea[disabled] {
+		color: #999;
+		border-color: #555;
+	}
 	input[type=text]:not(.lookup-performed):not(.success):not(.error), input:not([type]),
 	input[type=url], input[type=search], input[type=password], input[type=email], textarea {
 		background: #222;
