mb-dark: Fix highlighting of targeted edit notes

--- a/musicbrainz-dark.user.css
+++ b/musicbrainz-dark.user.css
@@ -296,6 +296,9 @@
 		background: #555;
 		color: #DDD;
 	}
+	.edit-note:target {
+		background: #884;
+	}
 	.edit-notes .edit-note .date {
 		color: #BBB;
 	}
