mb-dark: Fix colors of wiki subtitles, h5 and TOCs on File pages

--- a/musicbrainz-dark.user.css
+++ b/musicbrainz-dark.user.css
@@ -414,6 +414,7 @@
 	}
 	.wikicontent #toc, .wikicontent .toc,
 	.mw-body #toc, .mw-body .toc,
+	.mw-body #filetoc, /* TOC on "File:" pages */
 	.mw-body .catlinks, .mw-changeslist-legend {
 		background: #444;
 		border-color: #666;
@@ -424,11 +425,15 @@
 		color: inherit;
 	}
 	.wikicontent #toc h2, .mw-body #toc h2,
-	.mw-body .tocnumber, .mw-body h1, .mw-body h3, .mw-body h4, .portlet h3 {
+	.mw-body h1, .mw-body h3, .mw-body h4, .mw-body h5,
+	.portlet h3 {
 		color: inherit;
 	}
 	.mw-body .tocnumber, #p-personal li a {
 		color: #DDD;
+	}
+	#contentSub { /* subtitles like "redirected from" */
+		color: #999;
 	}
 	table.wikitable {
 		color: inherit;
