mb-dark: Link to the correct homepage section (metadata)

--- a/musicbrainz-dark.user.css
+++ b/musicbrainz-dark.user.css
@@ -1,10 +1,10 @@
 /* ==UserStyle==
 @name         MusicBrainz Dark
-@version      2021.11.12
+@version      2021.11.12.2
 @namespace    https://github.com/kellnerd/userstyles
 @author       kellnerd
 @description  Dark theme for MusicBrainz.
-@homepageURL  https://github.com/kellnerd/userstyles
+@homepageURL  https://github.com/kellnerd/userstyles#musicbrainz-dark
 @license      MIT
 ==/UserStyle== */
 
