--- a/musicbrainz-userscripts-dark.user.css
+++ b/musicbrainz-userscripts-dark.user.css
@@ -1,10 +1,10 @@
 /* ==UserStyle==
 @name         MusicBrainz Dark (Userscripts)
-@version      2021.11.1
+@version      2021.11.12
 @namespace    https://github.com/kellnerd/userstyles
 @author       kellnerd
 @description  Companion for “MusicBrainz Dark” with additional style fixes for some popular userscripts.
-@homepageURL  https://github.com/kellnerd/userstyles
+@homepageURL  https://github.com/kellnerd/userstyles#musicbrainz-dark
 @license      MIT
 ==/UserStyle== */
 
