--- a/musicbrainz-dark.user.css
+++ b/musicbrainz-dark.user.css
@@ -474,8 +474,8 @@
 		filter: invert(0.9) hue-rotate(180deg); /* invert icon */
 	}
 
-	/* keep original text color for elements with inline CSS (which might affect the background) */
-	table[style], td[style] {
+	/* keep original text color for elements with inline CSS which affects the background */
+	table[style*=background], td[style*=background] {
 		color: initial;
 	}
 
