mb-dark: Apply shadows only to actually black favicons
No longer apply it to all icons in the external links editor, only to
Discogs and homepage icons, but in all places (including userscripts).

--- a/musicbrainz-dark.user.css
+++ b/musicbrainz-dark.user.css
@@ -1,6 +1,6 @@
 /* ==UserStyle==
 @name         MusicBrainz Dark
-@version      2021.11.12.2
+@version      2021.11.13
 @namespace    https://github.com/kellnerd/userstyles
 @author       kellnerd
 @description  Dark theme for MusicBrainz.
@@ -181,7 +181,7 @@
 	span.autocomplete img.search {
 		filter: invert(0.5); /* visible when empty and after lookup was performed */
 	}
-	#external-links-editor span.favicon {
+	.discogs-favicon, .home-favicon {
 		filter: drop-shadow(0 0 2px #999); /* black icons become invisible otherwise */
 	}
 	/* popup dialog widget (autocomplete, cover art gallery) */
